--- a/main.html
+++ b/main.html
@@ -3,5 +3,6 @@
 <title>Keerthana Technologies</title>
 </head>
 <body bgcolor="red">
+<h1>Welcome to Keerthana Computer educations</h1>
 </body>
 </html>
