Adding Home contact us

--- a/main.html
+++ b/main.html
@@ -49,9 +49,9 @@ article {
   
 <nav>
   <ul>
-    <li><a href="#">London</a></li>
-    <li><a href="#">Paris</a></li>
-    <li><a href="#">Tokyo</a></li>
+    <li><a href="#">HOME</a></li>
+    <li><a href="#">Courese Offered</a></li>
+    <li><a href="#">Contact Us</a></li>
   </ul>
 </nav>
 
