changing header content

--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@ article {
 <div class="container">
 
 <header>
-   <h1>City Gallery</h1>
+   <h1>Keerthana Computer Educations</h1>
 </header>
   
 <nav>
