--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@ nav ul a {
 
 article {
     margin-left: 170px;
-    border-left: 1px solid gray;
+    border-left: 1px solid red;
     padding: 1em;
     overflow: hidden;
 }
@@ -57,11 +57,11 @@ article {
 
 <article>
   <h1>London</h1>
-  <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  <p>Keerthana Computer education is one of the best training unstitute in kadapa.</p>
+  <p>Tha goal of this institute is for providing a high skills for rual and urban students.</p>
 </article>
 
-<footer>Copyright &copy; W3Schools.com</footer>
+<footer>Copyright &copy; Keerthana Computer Education</footer>
 
 </div>
 
